캠페인용 css분리

--- a/campaign2022.css
+++ b/campaign2022.css
@@ -524,7 +524,7 @@ writer: css3studio
   #s202207144a87dad89bf00 main > .inside{
     max-width: none !important;
     width:auto !important;
-    padding:30px 15px;
+    padding:30px 15px 60px;
   }
 
 
