--- a/custom.css
+++ b/custom.css
@@ -25,7 +25,11 @@ writer: css3studio
   font-size:16px;
 }
 */
-
+/* header */
+header .logo img{
+  height:40px !important;
+  width:auto;
+}
 
 /* footer */
 footer{
