--- a/custom.css
+++ b/custom.css
@@ -40,10 +40,10 @@ header .btn_9044d4b90ed3d{
   gap:10px;
   align-items: center;
 }
-.scroll-to-fixed-fixed #w20220714dcdfb5ebb49cf .login_btn > div > .inline-blocked:nth-of-type(3) a span{
+header #w20220714dcdfb5ebb49cf .btn_n0Aa0u5u88 span{
   color:#999 !important;
 }
-#w20220714b5bd9746d6134 .search_btn i{
+header #w20220714b5bd9746d6134 .search_btn i{
   font-weight:500
 }
 header .mega_dropdown_wrap{
