--- a/custom.css
+++ b/custom.css
@@ -33,6 +33,9 @@ dl{
 }
 */
 /* header */
+header{
+  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+}
 header .logo img{
   height:40px !important;
   width:auto;
@@ -55,10 +58,10 @@ header #w20220714b5bd9746d6134 .search_btn i{
 }
 header .mega_dropdown_wrap{
   border-top:1px solid #DE649F;
-  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+  
 }
-header .mega_dropdown_wrap .mega_dropdown{
-  /* margin-left:60px */
+header ._mega_dropdown_container_w2022051236a317dca73dd{
+  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
 }
 
 /* footer */
@@ -76,8 +79,14 @@ footer .foot-custom .custom-text-info{
 }
 
 /** main **/
+
+#s20220714b8cb7ef0c1fb5 .section_bg{
+  background: #F9F9F9;
+}
+
 #s20220714b8cb7ef0c1fb5 main > .inside{
   max-width:1440px !important;
+  padding:0;
 }
 
 .slider-main{
@@ -134,6 +143,10 @@ footer .foot-custom .custom-text-info{
   display: flex;
   align-items: center;
   justify-content:center;
+}
+.slider-main .controls > a{
+  color:#D03B83;
+  font-size:20px;
 }
 .slider-main .controls .indicator{
   margin:0 20px;
