--- a/responsive.css
+++ b/responsive.css
@@ -10,6 +10,84 @@ writer: css3studio
     width:auto;
   }
 
+  /* footer */
+  .footer-group{
+    padding-bottom:70px;
+  }
+  .footer-group .footer-info{
+    flex-direction: column;
+    align-items:center;
+    border-bottom:none;
+    padding-bottom:0;
+  }
+  .footer-group .footer-info .logo{
+    margin-right:0px;
+    margin-bottom:24px;
+  }
+  .footer-group .footer-info ul{
+    display:flex;
+    flex-wrap: wrap;
+    gap:8px 16px;
+    justify-content:center;
+  }
+  .footer-group .footer-info ul li:after{
+    content:none;
+  }
+
+  .foot-sociallink{
+    position:absolute !important;
+    right:0;
+    top:initial;
+    bottom:0;
+    display:block;
+    width:100%;
+  }
+  .foot-sociallink > .btn-group{
+    display:flex !important;
+    flex-direction: row-reverse;
+    justify-content: center;
+  }
+  .foot-sociallink a i{
+    font-size:30px !important;
+  }
+  .footer-group .site-info{
+    padding-top:32px;
+    text-align:left;
+    flex-direction: column;
+  }
+  .footer-group .site-info .text-info{
+   text-align: center;
+  }
+
+  .footer-group .site-info .text-info dd em:not(:nth-of-type(4)){
+    display:block;
+    height:0;
+    color:#fff;
+  }
+  .footer-group .site-info .text-info dd br:nth-of-type(1){
+    display:none;
+  }
+  .footer-group .site-info .text-info dd strong:nth-of-type(3){
+   margin-left:10px
+  }
+  .footer-group .site-info select{
+    width:100%;
+    margin-bottom:24px;
+  }
+  .footer-group .link-info{
+    padding-bottom:90px;
+    border-bottom: 1px solid #E5E5E5;
+  }
+  .footer-group .link-info a{
+    width:100%;
+    right:0;
+    bottom:100px;
+    justify-content: center;
+  }
+
+  
+  
+  
 }
 
 /* 스마트폰 */
