--- a/custom.css
+++ b/custom.css
@@ -147,6 +147,7 @@ footer{
   background: #F5F5F5;
   padding:8px 16px;
   min-width:208px;
+  font-size:13px !important;;
   -moz-appearance:none; /* Firefox */
   -webkit-appearance:none; /* Safari and Chrome */
   appearance:none;
