--- a/custom.css
+++ b/custom.css
@@ -294,19 +294,29 @@ footer{
   border-radius:8px;
   background-color: #D03B83;
 }
-
-
-/**** mobile ****/
-
-@media screen and (max-width:991px) {
-
-
-
+.slider-main .controls2{
+  position:absolute;
+  bottom:90px;
+  left:50%;
+  transform: translateX(-50%);
 }
-
-/* 스마트폰 */
-@media screen and (max-width: 767px){
-
+.slider-main .controls2 > a{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  width:40px;
+  height:40px;
+  border-radius:20px;
+  border: 1px solid #E7A3C4;
+  background-color:#fff;
+  color:#D03B83;
+  font-size:20px;
+  margin-bottom:8px;
+}
+.slider-main .controls2 > a:hover{
+  border: 1px solid #B50F5F;
+  background-color:#D03B83;
+  color:#fff;
 }
 
 
