--- a/custom.css
+++ b/custom.css
@@ -561,12 +561,13 @@ footer{
 .headings-main2{
   display:flex;
   justify-content: space-between;
+  margin-bottom:24px;
 }
 .headings-main2 h2{
   font-weight:700;
   font-size:32px;
   color:#111;
-  margin:0 0 8px;
+  margin:0;
 }
 .headings-main2 .more{
   display:flex;
@@ -591,7 +592,9 @@ footer{
   color:#000;
   border-color:#000;
 }
-
+#s202207154f925629263e6 .list-style.row_01 .list:first-of-type{
+  padding-top:0 !important;
+}
 #s202207154f925629263e6 .list-style.row_01 .thumb{
   display:none;
 }
@@ -600,7 +603,19 @@ footer{
 }
 #s202207154f925629263e6 .list-style.row_01 .title > a{
   font-weight:700;
-  margin-bottom:8px;
+  margin-bottom:0;
+}
+#s202207154f925629263e6 .list-style.row_01 .title > a > span{
+  height:56px;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  line-height:1.55555;
+}
+#s202207154f925629263e6 .list-style.row_01 .title > a:hover > span{
+  text-decoration: underline;
 }
 #s202207154f925629263e6 .list-style.row_01 .title > a > em{
   color:#D03B83 !important;
@@ -631,7 +646,66 @@ footer{
   display:block;
   padding-right:8px;
 }
-
+#s202207154f925629263e6 .blog-body{
+  margin-bottom:24px !important;
+}
+#s202207154f925629263e6 .blog-body .img{
+  height:248px;
+  margin-bottom:26px;
+}
+#s202207154f925629263e6 .blog-body .img img{
+  height:100%;
+}
+#s202207154f925629263e6 .blog-body .text-block{
+  margin-bottom:8px;
+}
+#s202207154f925629263e6 .blog-body .text-block > strong {
+  font-weight:700;
+  font-size:18px;
+  line-height:1.5555;
+}
+#s202207154f925629263e6 .blog-body .text-block > strong > a:first-of-type{
+  line-height:1.6 !important;
+  margin-bottom:8px !important;
+}
+#s202207154f925629263e6 .blog-body .text-block > strong > a:first-of-type em{
+  color:#D03B83 !important;
+  font-size:14px;
+  padding-left:110px;
+  margin-bottom:8px;
+  display:block;
+}
+#s202207154f925629263e6 .blog-body .text-block > strong > a:last-of-type{
+  height:56px;
+  display:-webkit-box;
+  -webkit-line-clamp:2;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+  text-overflow:ellipsis;
+  line-height:1.55555;
+}
+#s202207154f925629263e6 .blog-head{
+  position:absolute;
+  bottom:88px;
+}
+#s202207154f925629263e6 .blog-head:before{
+  content:"";
+  width:100px;
+  height:1px;
+  border-top:1px solid #999;
+  position:absolute;
+  left:0;
+  top:50%;
+  z-index:-1;
+}
+#s202207154f925629263e6 .blog-head span{
+  background-color:#fff;
+  padding-right:8px;
+  opacity: 1;
+}
+#s202207154f925629263e6 .blog-head span a{
+  color:#999 !important;
+}
 
 
 
