--- a/custom.css
+++ b/custom.css
@@ -452,7 +452,10 @@ footer .custom-text{
   padding:96px 0;
 }
 #w202207155927692832b65 .post_row{
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+}
+#w202207155927692832b65 .post_row > button{
+  position:absolute;
 }
 #w202207155927692832b65 .type_grid .list-style-card .ma-item{
   padding:0 !important;
@@ -469,6 +472,113 @@ footer .custom-text{
 #newest_w202207155927692832b65 .post_row .dummy_col{
   display:none;
 }
+#newest_w202207155927692832b65 .post_row .slick-list{
+
+}
+#newest_w202207155927692832b65 .post_row .slick-slide{
+  margin:0 16px;
+  width:268px !important;
+}
+
+#newest_w202207155927692832b65 .post_row .slick-prev{
+  position: absolute;
+  top:-70px;
+  right:60px;
+  border:none;
+  background: transparent;
+  text-indent: -9999px;
+  height:28px;
+  padding:0;
+  display:flex;
+  justify-content: :center;
+  align-items: center;
+}
+#newest_w202207155927692832b65 .post_row  .slick-prev:after{
+  content:"\e908";
+  display:block;
+  font-family:xeicon;
+  text-indent: 0 !important;
+  color:#B50F5F;
+  font-size:20px;
+}
+#newest_w202207155927692832b65 .post_row  .slick-next{
+  position: absolute;
+  top:-70px;
+  right:16px;
+  border:none;
+  background: transparent;
+  text-indent: -9999px;
+  height:28px;
+  padding:0;
+  display:flex;
+  justify-content: :center;
+  align-items: center;
+}
+#newest_w202207155927692832b65 .post_row  .slick-next:after{
+  content:"\e90b";
+  display:block;
+  font-family:xeicon;
+  text-indent: 0 !important;
+  color:#B50F5F;
+  font-size:20px;
+}
+
+.card .card-body .title{
+  font-weight:700;
+  font-size:18px !important;;
+  color:#333 !important;
+  line-height:1.555;
+  height:118px;
+  margin-bottom:16px;
+  display:-webkit-box;
+  -webkit-line-clamp:3;
+  -webkit-box-orient:vertical;
+  overflow:hidden;
+  text-overflow:ellipsis;
+}
+.card .card-body .title span{
+  display:block;
+  margin-bottom:8px;
+  padding-left:110px;
+}
+.card .card-body .title span em{
+  color: #D03B83 !important;
+  font-size:14px;
+}
+.card .card-body .text span{
+  color: #B50F5F;
+  font-size:14px;
+  text-overflow:ellipsis;
+  white-space:nowrap;
+  word-wrap:normal;
+  overflow:hidden        
+}
+.card .card-summary{
+  position:absolute;
+  top:188px;
+}
+.card .card-summary:before{
+  content:"";
+  display:block;
+  width:100px;
+  height:1px;
+  border-top:1px solid #999;
+  position: absolute;
+  top:8px;
+  left:0;
+  z-index:-1
+}
+.card .card-summary .date{
+  font-size: 14px !important;
+  color: #999999 !important;
+  background-color:#fff;
+  display:block;
+  opacity: 1;
+  padding-right:8px;
+}
+
+
+
 
 
 
