--- a/custom.css
+++ b/custom.css
@@ -33,8 +33,8 @@ dl{
 }
 */
 /* header */
-header{
-  box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
+header#doz_header_wrap .section_bg_color{
+  box-shadow: 0px 4px 24px rgba(0, 0, 0, 0.05);
 }
 header .logo img{
   height:40px !important;
