--- a/custom.css
+++ b/custom.css
@@ -667,6 +667,7 @@ footer .custom-text{
   font-size: 12px;
   margin-bottom: 44px !important;
   padding-left:85px;
+  opacity:0.7;
 }
 
 .scription-main a.more{
