--- a/responsive.css
+++ b/responsive.css
@@ -174,6 +174,12 @@ writer: css3studio
 
 
   /*W스토리*/
+  
+  .owl-carousel .owl-item{
+    width:268px !important;
+  }
+  
+  
   #s2022071582b8b506246e2{
     padding:48px 0;
   }
