--- a/custom.css
+++ b/custom.css
@@ -4,6 +4,9 @@ writer: css3studio
 */
 
 /*공톨*/
+html{
+  font-size:16px;
+}
 * {
   word-break:keep-all;
 }
@@ -74,7 +77,7 @@ header .nav.sub_mega_drop li:last-child:after{
 
 header .mega_dropdown_wrap{
   border-top:1px solid #DE649F;
-  
+
 }
 header ._mega_dropdown_container_w2022051236a317dca73dd{
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.05);
@@ -199,7 +202,7 @@ footer .custom-text{
   font-family:xeicon;
   transform:rotate(-45deg)
 }
-.footer-group .link-info a:hover:after{ 
+.footer-group .link-info a:hover:after{
   border: 1px solid #D03B83;
   color:#D03B83
 }
@@ -686,7 +689,7 @@ footer .custom-text{
   text-overflow:ellipsis;
   white-space:nowrap;
   word-wrap:normal;
-  overflow:hidden        
+  overflow:hidden
 }
 .card a:hover .card-body .title{
   text-decoration: underline;
@@ -1037,7 +1040,7 @@ footer .custom-text{
 }
 #s202207151ce11d103cbab .form-widget .form-group.privacy .checkbox label{
   font-size:14px;
-  color:#666; 
+  color:#666;
 }
 #s202207151ce11d103cbab .checkbox-styled:not(ie8) input ~ span::before{
   border-color:#DD8E32;
